Failures when vmIntrinsics::_getClass is not inlined

XMLWordPrintable

    • b12
    • x86_64
    • linux

        Several tests fail when running with -XX:-InlineNatives or -XX:-InlineClassNatives.

        For example, jdk/java/lang/invoke/LFCaching/LFSingleThreadCachingTest.java:

        java.lang.ClassCastException: Cannot cast java.lang.Object to java.lang.invoke.BoundMethodHandle$SpeciesData
        at java.base/java.lang.Class.cast(Class.java:3613)
        at java.base/java.lang.invoke.ClassSpecializer.findSpecies(ClassSpecializer.java:202)
        at java.base/java.lang.invoke.BoundMethodHandle$SpeciesData.extendWith(BoundMethodHandle.java:352)
        at java.base/java.lang.invoke.LambdaFormEditor.newSpeciesData(LambdaFormEditor.java:392)
        at java.base/java.lang.invoke.LambdaFormEditor.bindArgumentForm(LambdaFormEditor.java:455)
        at java.base/java.lang.invoke.LambdaFormEditor.bindArgumentI(LambdaFormEditor.java:406)
        at java.base/java.lang.invoke.BoundMethodHandle.bindArgumentI(BoundMethodHandle.java:100)
        at java.base/java.lang.invoke.MethodHandles.insertArgumentPrimitive(MethodHandles.java:3534)
        at java.base/java.lang.invoke.MethodHandles.insertArguments(MethodHandles.java:3515)
        ...


        With sun/invoke/util/ValueConversionsTest.java:

        JavaTest Message: JUnit Failure: testConvert(test.sun.invoke.util.ValueConversionsTest): null
        java.lang.AssertionError
        at java.base/sun.invoke.util.Wrapper.convert(Wrapper.java:537)
        at java.base/sun.invoke.util.Wrapper.cast(Wrapper.java:495)
        at test.sun.invoke.util.ValueConversionsTest.testConvert(ValueConversionsTest.java:189)
        at test.sun.invoke.util.ValueConversionsTest.testConvert(ValueConversionsTest.java:173)
        ...

          1. Test.java
            1 kB
            Tobias Hartmann

              Assignee:
              Tobias Hartmann
              Reporter:
              Mikael Vidstedt
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

                Created:
                Updated:
                Resolved: