8218201: Failures when vmIntrinsics::_getClass is not inlined

Fix BCEscapeAnalyzer to correctly handle _getClass intrinsic.

Reviewed-by: kvn, dlong, redestad, neliasso